Fix duplicate items in PWA app menu and titlebar right-click menu.

Titlebar right click menu: https://bugs.chromium.org/p/chromium/issues/attachment?aid=403610&signed_aid=oWavm0cAvedeYKrMLWtO9w==&inline=1
PWA app menu: https://bugs.chromium.org/p/chromium/issues/attachment?aid=403611&signed_aid=xL76hEuCQl1nB-LBpyOaoA==&inline=1

Bug: 791392
Change-Id: Ie4c9323f8086f177be576e255041dec31222289c
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/1714606
Reviewed-by: Bret Sepulveda <bsep@chromium.org>
Reviewed-by: Alan Cutter <alancutter@chromium.org>
Commit-Queue: Glen Robertson <glenrob@chromium.org>
Cr-Commit-Position: refs/heads/master@{#680720}

Former-commit-id: e6036f2bce7b0f2d810720e956494e234ac8ea5d